--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -4,11 +4,6 @@
     ViewData["Title"] = "Registrar Cliente";
 }
 
-@{
-    var httpContext = ViewContext.HttpContext;
-    var usuarioRol = httpContext.Session.GetString("UsuarioRol");
-
-}
 
 
 <div class="card">
@@ -51,18 +46,30 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group col-md-5">
-                <label asp-for="Passaword" class="control-label"></label>
-                <input asp-for="Passaword" class="form-control" />
-                <span asp-validation-for="Passaword" class="text-danger"></span>
+                <label asp-for="Password" class="control-label"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+                <div class="form-group col-md-5">
+                        <label asp-for="ConfirmPassword" class="control-label"></label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                </div>
+
+                    <div class="form-group col-md-3">
+                        <label asp-for="Rol" class="control-label"></label>
+                        <select asp-for="Rol" class="form-control">
+                            <option value="Cliente">Cliente</option>
+                            
+                        </select>
+                        <span asp-validation-for="Rol" class="text-danger"></span>
+                    </div>
             <div class="form-group">
                 
                 <input type="submit" value="Crear" class="btn btn-secondary" />
-                        @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" || usuarioRol == "Empleado")
-
-                        {
-                        <a asp-action="Index" class="btn btn-danger">Cancelar</a>
-                         }
+                        
+                        <a asp-area="" asp-controller="Login" asp-action="LoginC" class="btn btn-danger">Cancelar</a>
+                         
             </div>
         </form>
     </div>
