--- a/Views/Clientes/Edit.cshtml
+++ b/Views/Clientes/Edit.cshtml
@@ -44,10 +44,11 @@
             </div>
                     <div class="col-md-6">
                         
-                        <input type="hidden" asp-for="Passaword" class="form-control" />
-                        <span type="hidden" asp-validation-for="Passaword" class="text-danger"></span>
+                        <input type="hidden" asp-for="Password" class="form-control" />
+                        <span type="hidden" asp-validation-for="Password" class="text-danger"></span>
                     </div>
             <div class="form-group">
+
                 <input type="submit" value="Guardar" class="btn btn-secondary" /> |
                 <a class="btn btn-danger" asp-action="Index">Cancelar</a>
             </div>
