--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -6,11 +6,8 @@
 
 <div class="card">
     <div class="card-body">
-<h1 class="card-title">Registro de cliente</h1>
+<h1 class="card-title">Registro de clientes</h1>
 
-<p>
-    <a class="btn btn-secondary" asp-action="Create">Crear nuevo cliente</a>
-</p>
 <div class="table-responsive">
     <table class="table table-bordered table-sm">
     <thead>
@@ -33,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.FechaNacimiento)
             </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Rol)
+                        </th>
             
             <th></th>
         </tr>
@@ -58,11 +58,20 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FechaNacimiento)
             </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Rol)
+                            </td>
                            
              <td class="btn-group-vertical" >
-                        <a class="mb3 btn btn-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                                @if (User.IsInRole("Cliente,Administrador"))
+                                {
+                                    <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                                    <a class="mb3 btn btn-dark" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                                }
+                             
+             
                         <a class="mb3 btn btn-secondary" asp-action="Details" asp-route-id="@item.Id">Detalle</a>
-                        <a class="mb3 btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+              
             </td>
         </tr>
 }
