--- a/Views/Empleados/Create.cshtml
+++ b/Views/Empleados/Create.cshtml
@@ -42,19 +42,27 @@
                 <input asp-for="Telefono" class="form-control" />
                 <span asp-validation-for="Telefono" class="text-danger"></span>
             </div>
-            <div class="form-group col-md-7">
-                <label asp-for="Rol" class="control-label"></label>
-                        @Html.DropDownList("Rol", new SelectList(new[] { "Empleado"}))
+                    <div class="form-group col-md-3">
+                        <label asp-for="Rol" class="control-label"></label>
+                        <select asp-for="Rol" class="form-control">
+                            <option value="Administrador">Administrador</option>
+                            <option value="Empleado">Empleado</option>
+                        </select>
                         <span asp-validation-for="Rol" class="text-danger"></span>
-            </div>
+                    </div>
             <div class="form-group col-md-5">
                 <label asp-for="Password" class="control-label">Contraseña</label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+                    <div class="form-group col-md-5">
+                        <label asp-for="ConfirmPassword" class="control-label">Contraseña</label>
+                        <input asp-for="ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
             <div class="form-group">
                 <input type="submit" value="Crear nuevo empleado" class="btn btn-dark" />
-                        <a asp-area="" class="btn btn-secondary" asp-controller="Home" asp-action="IndexHome">Cancelar</a>
+                        <a asp-area="" class="btn btn-secondary" asp-controller="Login" asp-action="LoginE">Cancelar</a>
             </div>
         </form>
     </div>
