--- a/Views/Empleados/Details.cshtml
+++ b/Views/Empleados/Details.cshtml
@@ -65,8 +65,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index" class="btn btn-outline-info">Cancelar</a>
+
+                <a asp-action="Edit" class="btn btn-outline-success" asp-route-id="@Model?.Id">Editar</a>
+            <span>|</span>
+            <a asp-action="Index" class="btn btn-outline-info">Cancelar</a>
 </div>
     </div>
 </div>
