--- a/Views/Home/IndexHome.cshtml
+++ b/Views/Home/IndexHome.cshtml
@@ -15,25 +15,17 @@
                 <img class="card-img-center" src="~/img/personEmple.svg" alt="Imagen de Restaurante">
                 <div class="card-body">
                 
-                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Empleados" asp-action="create">Registrar Empleado</a>
+                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="LoginE"> Empleado</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="card card-custom">
-                <img class="card-img-center" src="~/img/person.svg" alt="Imagen de Iniciar Sesion">
-                <div class="card-body">
-                 
-                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="Index">Iniciar Sesion</a>
-                </div>
-            </div>
-        </div>
+
         <div class="col-md-4">
             <div class="card card-custom">
                 <img class="card-img-center" src="~/img/calendario.svg" alt="Imagen de Cliente">
                 <div class="card-body">
                  
-                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Clientes" asp-action="create">Registrar Cliente</a>
+                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="LoginC">Cliente</a>
                 </div>
             </div>
         </div>
