--- a/Views/Reservas/Index.cshtml
+++ b/Views/Reservas/Index.cshtml
@@ -4,23 +4,18 @@
     ViewData["Title"] = "Index";
 }
 
-@{
-    var httpContext = ViewContext.HttpContext;
-    var usuarioRol = httpContext.Session.GetString("UsuarioRol");
-   
-}
-
 
 <div class="card">
     <div class="card-body">
         <h1 class="card-title">Reservaciones</h1>
 
-<p>
-            @if (usuarioRol == "Administrador" || usuarioRol == "Cliente")
-
+        <p>
+            @if (User.IsInRole("Cliente"))
             {
                 <a asp-action="Create" class="btn btn-secondary">Nueva Reserva</a>
             }
+            
+            
         </p>
         <div class="table-responsive">
             <table class="table table-bordered table-sm">
@@ -70,19 +65,16 @@
                 @Html.DisplayFor(modelItem => item.FechaFin)
             </td>
             <td class="btn-group-vertical">
-                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente")
-
+                                @if (User.IsInRole("Cliente"))
                                 {
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-dark">Editar</a>
                                 }
-                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" || usuarioRol == "Empleado")
-
-                                    {
+                                @if (User.IsInRole("Cliente,Administrador,Empleado"))
+                                {
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-secondary">Detalles</a>
                                     }
-                                @if (usuarioRol == "Administrador" || usuarioRol == "Cliente" )
-
-                                        {
+                                @if (User.IsInRole("Cliente"))
+                                {
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Eliminar</a>
                                         }
             </td>
