--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -56,19 +56,11 @@
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
 
-                    <div class="form-group col-md-3">
-                        <label asp-for="Rol" class="control-label"></label>
-                        <select asp-for="Rol" class="form-control">
-                            <option value="Cliente">Cliente</option>
-                            
-                        </select>
-                        <span asp-validation-for="Rol" class="text-danger"></span>
-                    </div>
             <div class="form-group">
                 
                 <input type="submit" value="Crear" class="btn btn-secondary" />
                         
-                        <a asp-area="" asp-controller="Login" asp-action="LoginC" class="btn btn-danger">Cancelar</a>
+                        <a asp-area="" asp-controller="Home" asp-action="IndexHome" class="btn btn-danger">Cancelar</a>
                          
             </div>
         </form>
