--- a/Views/Empleados/Create.cshtml
+++ b/Views/Empleados/Create.cshtml
@@ -44,8 +44,7 @@
             </div>
                     <div class="form-group col-md-3">
                         <label asp-for="Rol" class="control-label"></label>
-                        <select asp-for="Rol" class="form-control">
-                            <option value="Administrador">Administrador</option>
+                        <select asp-for="Rol" class="form-control">   
                             <option value="Empleado">Empleado</option>
                         </select>
                         <span asp-validation-for="Rol" class="text-danger"></span>
@@ -62,7 +61,7 @@
                     </div>
             <div class="form-group">
                 <input type="submit" value="Crear nuevo empleado" class="btn btn-dark" />
-                        <a asp-area="" class="btn btn-secondary" asp-controller="Login" asp-action="LoginE">Cancelar</a>
+                        <a asp-area="" class="btn btn-secondary" asp-controller="Home" asp-action="IndexHome">Cancelar</a>
             </div>
         </form>
     </div>
