--- a/Views/Home/IndexHome.cshtml
+++ b/Views/Home/IndexHome.cshtml
@@ -10,22 +10,30 @@
 	<h1 class="card-footer"   style="background-color:lavenderblush " >Bienvenidos a T-Reservation</h1>
 <div class="container text-center" style="margin-top: 3rem;">
     <div class="row">
-        <div class="col-md-4">
+      @*   <div class="col-md-4">
             <div class="card card-custom">
                 <img class="card-img-center" src="~/img/personEmple.svg" alt="Imagen de Restaurante">
                 <div class="card-body">
                 
-                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="LoginE"> Empleado</a>
+                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Empleados" asp-action="Create">Registrar Empleado</a>
+                </div>
+            </div>
+        </div> *@
+        <div class="col-md-4">
+            <div class="card card-custom">
+                <img class="card-img-center" src="~/img/person.svg" alt="Imagen de Usuario">
+                <div class="card-body">
+
+                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="Login"> Iniciar Sesión</a>
                 </div>
             </div>
         </div>
-
         <div class="col-md-4">
             <div class="card card-custom">
                 <img class="card-img-center" src="~/img/calendario.svg" alt="Imagen de Cliente">
                 <div class="card-body">
                  
-                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Login" asp-action="LoginC">Cliente</a>
+                    <a asp-area="" class="btn btn-dark btn-block btn-custom" asp-controller="Clientes" asp-action="Create">Registrar Cliente</a>
                 </div>
             </div>
         </div>
