--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                 </li>
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginE">Cerrar Sesión</a>
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                                 </li>
                             }
                         }
@@ -100,7 +100,7 @@
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginE">Cerrar Sesión</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                             </li>
                         }
 
@@ -124,12 +124,12 @@
 
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="LoginC">Cerrar Sesión</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                             </li>
                         }
                         
                             <li>
-                            <span>@User.Identity.Name</span>
+                              <span>@User.Identity.Name</span>
                             </li>
                         
                        
