confirmación de reserva<3

--- a/Views/Reservas/Create.cshtml
+++ b/Views/Reservas/Create.cshtml
@@ -80,7 +80,7 @@
         function enviarFormulario(e) {
             e.preventDefault();
 
-            Swal.fire({c
+            Swal.fire({
                 title: "Su reservación se realizo correctamente",
                 // text: "¡No podrás revertir esto!",
                 icon: "success",
