--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -4,11 +4,16 @@
     ViewBag.Title = "Inicio de Sesión";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+<div class="card">
+    <div class="card-body">
 
-<h4>Cliente</h4>
-<hr />
+                    <h4 class="text-center">Inicio de sesión</h4>
+    <hr />
 
-<div class="col-md-4">
+
     <form asp-action="Login">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" name="ReturnUrl" value="@ViewBag.ReturnUrl" />
@@ -17,20 +22,25 @@
             <input asp-for="Correo" class="form-control" />
             <span asp-validation-for="Correo" class="text-danger"></span>
         </div>
-        <div class="form-group">
+            <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
-
+        <br />
         <div class="form-group">
             <input type="submit" value="Entrar" class="btn btn-primary" />
             <span>@ViewBag.Error</span>
+            <br />
             <label class="control-label">¿No tienes una cuenta?</label>
             <span> <a asp-area="" class="btn btn-link" asp-controller="Home" asp-action="IndexHome">Registrar</a></span>
          
         </div>
     </form>
+</div>
+</div>
+</div>
+</div>
 </div>
 
 
