Maestro de detalles y pequeños cambios.

--- a/Views/Home/CatalogoRestaurante.cshtml
+++ b/Views/Home/CatalogoRestaurante.cshtml
@@ -28,7 +28,7 @@
                     <h5 class="text-center">@item.Nombre</h5>   
 
                  <div class="d-flex justify-content-center">
-                        <a href="@Url.Action("VerMasR", new { id = item.Id })" class="btn btn-dark" >Ver más</a>
+                        <a href="@Url.Action("VerMasR", new { id = item.IdRestaurante })" class="btn btn-dark">Ver más</a>
                         </div>
                     </div>
                 </div>
