--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -29,7 +29,7 @@
         </div>
         <br />
         <div class="form-group">
-            <input type="submit" value="Entrar" class="btn btn-primary" />
+            <input type="submit" value="Entrar" class="btn btn-primary col-md-12" />
             <span>@ViewBag.Error</span>
             <br />
             <label class="control-label">¿No tienes una cuenta?</label>
