--- a/Views/Home/VerMasR.cshtml
+++ b/Views/Home/VerMasR.cshtml
@@ -37,7 +37,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id"></a>
+            <a asp-action="Edit" asp-route-id="@Model?.IdRestaurante"></a>
     <a asp-action="CatalogoRestaurante" class="btn btn-outline-secondary">Regresar</a>
     <a asp-action="CatalogoMenu" class="btn btn-outline-secondary">Ver menu</a>
             <a asp-controller="Reservas" asp-action="Create" class="btn btn-outline-secondary">realizar reserva</a>
