--- a/Views/Restaurantes/Create.cshtml
+++ b/Views/Restaurantes/Create.cshtml
@@ -40,6 +40,11 @@
                 <label asp-for="EmpleadoId" class="control-label">Empleado</label>
                 <select asp-for="EmpleadoId" class ="form-control" asp-items="ViewBag.EmpleadoId"></select>
             </div>
+                    <div class="row">
+                        <div class="row row-cols-md-12">
+                            @await Html.PartialAsync("_Mesas", Model.Mesas)
+                        </div>
+                    </div>
             <div class="form-group">
             <input type="submit" value="Crear" class="btn btn-dark" /> |
             <a asp-action="Index" class="btn btn-danger">cancelar</a>
