--- a/Views/Restaurantes/Details.cshtml
+++ b/Views/Restaurantes/Details.cshtml
@@ -45,10 +45,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Empleados.Nombre)
         </dd>
+                <div class="row">
+                    <div class="row row-cols-md-12">
+                        @await Html.PartialAsync("_Mesas", Model.Mesas)
+                    </div>
+                </div>
     </dl>
 </div>
 <div>
-  <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model?.Id">Editar</a> |
+            <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model?.IdRestaurante">Editar</a> |
  <a asp-action="Index" class="btn btn-danger">Cancelar</a>
 </div>
 </div>
