--- a/Views/Reservas/Create.cshtml
+++ b/Views/Reservas/Create.cshtml
@@ -90,6 +90,19 @@
 
         function enviarFormulario(e) {
             e.preventDefault();
+            // Validar si el formulario es válido
+            const formulario = document.getElementById('formulario');
+            if (!formulario.checkValidity()) {
+                // Si el formulario no es válido, mostrar mensaje de error
+                Swal.fire({
+                    title: "Error",
+                    text: "Por favor, complete correctamente el formulario.",
+                    icon: "error",
+                    confirmButtonColor: "#3085d6",
+                    confirmButtonText: "OK"
+                });
+                return; // Detener el proceso
+            }
 
             const codigoReserva = generarCodigo(); // Generar un nuevo código de reserva
 
