--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/T_Reservation.styles.css" asp-append-version="true" />
 </head>
-<body class="bg-image" style="background-image: url('https://static.vecteezy.com/system/resources/previews/015/805/854/non_2x/eco-friendly-cutlery-seamless-pattern-knife-fork-spoon-eco-kitchen-cutlery-vector.jpg');">
+<body class="bg-image" style="background-image: url('https://us.123rf.com/450wm/yulia87/yulia871604/yulia87160400058/55784533-vector-patr%C3%B3n-transparente-de-siluetas-de-cocina-sobre-fondo-rojo.jpg?ver=6');">
     <header>
-       
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-dark bg-body">
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-light bg-danger">
             <div class="container-fluid">
-                <a class="navbar-brand">T-Reservation</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,106 +26,100 @@
                             {
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Restaurantes" asp-action="GraficoPorFecha">Metricas</a>
 
                                 </li>
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
 
                                 </li>
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Catálogo de Menú</a>
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Empleados" asp-action="Index">Empleados</a>
 
                                 </li>
+
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menú</a>
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Productos</a>
 
                                 </li>
                                
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
+
+                                </li>
+
+                                <li class="nav-item">
+
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
 
                                 </li>
                                 <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Catálogo Restaurante</a>
-
+                                    <a class="navbar-brand" text-dark" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                                 </li>
-                                <li class="nav-item">
 
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurantes</a>
-
-                                </li>
-                                <li class="nav-item">
-
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
-                                </li>
-                                <li class="nav-item">
-
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="GraficoPorFecha">Grafico</a>
-
-                                </li>
                             }
                         }
                         @if (User.IsInRole("Empleado"))
                         {
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="Index">Restaurants</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Restaurantes" asp-action="GraficoPorFecha">Metricas</a>
 
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Menus" asp-action="Index">Menú</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Restaurantes" asp-action="Index">My restaurante</a>
 
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Menus" asp-action="Index">Productos</a>
+
+                            </li>
+                            <li class="nav-item">
+
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
 
                             </li>
                            
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
 
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                             </li>
-                            <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Restaurantes" asp-action="GraficoPorFecha">Grafico</a>
-
-                            </li>
                         }
 
                            @if (User.IsInRole("Cliente"))
                         {
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Catálogo Restaurante</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CatalogoRestaurante">Restaurantes</a>
 
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservas" asp-action="Index">Reservaciones</a>
 
                             </li>
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Catálogo de Menú</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CatalogoMenu">Productos</a>
 
                             </li>
 
                             <li class="nav-item">
 
-                                <a class="nav-link text-white" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
+                                <a class="navbar-brand" text-dark" asp-area="" asp-controller="Login" asp-action="Login">Cerrar Sesión</a>
                             </li>
                         }
                         
@@ -148,7 +141,7 @@
 
     <footer>
         <div class="container">
-            &copy; 2024 T-Reservation
+     
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
