--- a/Views/Shared/_LayoutLogin.cshtml
+++ b/Views/Shared/_LayoutLogin.cshtml
@@ -8,23 +8,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/T_Reservation.styles.css" asp-append-version="true" />
 </head>
-<body class="bg-image" style="background-image: url('https://static.vecteezy.com/system/resources/previews/015/805/854/non_2x/eco-friendly-cutlery-seamless-pattern-knife-fork-spoon-eco-kitchen-cutlery-vector.jpg');">
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 navbar-dark bg-body">
-            <div class="container-fluid">
-                <a class="navbar-brand">T-Reservation</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                       
-                    <li class="nav">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="IndexHome">Registrarse</a>
-                    </li>
-                </div>
-            </div>
-        </nav>
+<body class="bg-image" style="background-image: url('https://us.123rf.com/450wm/yulia87/yulia871604/yulia87160400058/55784533-vector-patr%C3%B3n-transparente-de-siluetas-de-cocina-sobre-fondo-rojo.jpg?ver=6');">
+    <header> 
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -34,7 +20,7 @@
 
     <footer>
         <div class="container">
-            &copy; 2024 T-Reservation
+          
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
